# manifest

./: .gitignore  README.md
.github/workflows/: image-updates.yml
docker-compose/adguard-home/: docker-compose.yaml
docker-compose/blog-backend/: docker-compose.yml
docker-compose/couchdb/: docker-compose.yml
docker-compose/couchdb/default.d/: livesync.ini
docker-compose/dongjoo.me/: docker-compose.yml  uploads.ini
docker-compose/gitgarden/: .env.example  docker-compose.yml
docker-compose/influxdb/: .env.example  docker-compose.yml
docker-compose/miniflux/: .env.example  docker-compose.yaml  docker-compose.yml
docker-compose/n8n/: docker-compose.yaml  ssh_config
docker-compose/nextcloud/: docker-compose.yml
docker-compose/portainer/: docker-compose.yml
docker-compose/postgres/: .env.example  docker-compose.yml
docker-compose/postgres-dev/: docker-compose.yml
docker-compose/traffic-switcher/: .env.example  config.yaml  docker-compose.yml
docker-compose/zero-ops-bot/: docker-compose.yml
kubernetes/argocd/configmaps/: configmap-argocd-cm.yaml  (+4 more)
kubernetes/cloudflared/: deployment.yaml  secret.yaml.example
kubernetes/cloudflared-sssup/: README.md  deployment.yaml  namespace.yaml  sealed-secret.yaml  secret.yaml.example
kubernetes/infisical/: README.md  namespace.yaml
kubernetes/infisical-operator/: README.md
kubernetes/monitoring/: README.md  namespace.yaml
tools/image-check/: Cargo.toml  README.md
tools/image-check/src/: main.rs  reference.rs  registry.rs  scan.rs  version.rs
tools/image-check/tests/: e2e.rs
(+122 files in other folders)
